https://sikt.atlassian.net/browse/NP-47841